--- a/src/Anyx/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Anyx/UserBundle/Resources/views/Security/login.html.twig
@@ -1,20 +1,29 @@
 {% extends "AnyxUserBundle::layout.html.twig" %}
 {% block fos_user_content %}
 
-<form action="{{ path("fos_user_security_check") }}" method="post" class="form">
+<form action="{{ path("fos_user_security_check") }}" method="post" class="login-form seven-columns">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-    <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-    <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="password" id="password" name="_password" />
-
-    <label for="remember_me" class="checkbox">
-        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+    <ul class="inputs">
+        <li>
+            <span class="icon-user mid-margin-right"></span>
+            <input type="text" autocomplete="off" placeholder="{{ 'security.login.username'|trans }}" class="input-unstyled" value="{{ last_username }}" id="username" name="_username">
+        </li>
+        <li>
+            <span class="icon-lock mid-margin-right"></span>
+            <input type="password" autocomplete="off" placeholder="{{ 'security.login.password'|trans }}" class="input-unstyled" value="" id="password" name="_password">
+        </li>
+    </ul>
+    
+    <p>
+    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+    <label for="remember_me">
         {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
     </label>
-
+    </p>
+    
+    <p><a href="{{ path('fos_user_registration_register') }}">{{ 'Register' | trans }}</a></p>
+    
     <p class="submit-container">
     <input type="submit" id="_submit" class="button blue-gradient glossy" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
     </p>
