--- a/src/Anyx/CrosswordBundle/Resources/views/Crossword/new.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Crossword/new.html.twig
@@ -6,6 +6,16 @@
 
 {% block page_title %}{{title| trans}}{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+        '@AnyxCrosswordBundle/Resources/public/css/styles/form.css'
+    %}
+        <link type="text/css" rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+{% endblock %}  
+
+
 {% block body %}
 <div class="row">
     <div class="span7">
