--- a/src/Anyx/CrosswordBundle/Resources/views/Form/theme.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Form/theme.html.twig
@@ -1,9 +1,9 @@
 {% block field_errors %}
 {% spaceless %}
-    {% if errors|length > 0 %}
-    <ul class="errors form-errors">
+    {% if errors|length > 0 %} 
+    <ul class="errors form-errors red">
         {% for error in errors %}
-            <li>{{ error.messageTemplate|trans(error.messageParameters, 'validators') }}</li>
+            <li>{{ error.messageTemplate|trans(error.messageParameters) }}</li>
         {% endfor %}
     </ul>
     {% endif %}
