--- a/src/Anyx/CrosswordBundle/Resources/public/css/main.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/main.css
@@ -22,30 +22,83 @@ header {
     height: 2.9em;
 }
 
-.top-menu {
-    height: 2.9em;
-    background: #2D9AD3;
-    float: left;
-    padding: 0 10px;
-    line-height: 2.9em;
-    padding: 0 10px;
-    border-radius: 0 0 7px 7px;
-    text-shadow: 1px 1px 1px #222222;
+.header-container {
+    padding: 0px 20px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+    -webkit-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+    -moz-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+    color: #bfbfbf;
+    font-weight: bold;
+    font-family: Corbel, Lucida Grande, Lucida Sans Unicode, Lucida Sans, DejaVu Sans, Bitstream Vera Sans, Liberation Sans, Verdana;
+    line-height: 2em;
+    height: 2em;
+    padding: 5px 20px;
     font-size:	14px;
+}
+
+.top-menu {
 }
 .nav-right {
     float: right;
     font-weight: bold;
 }
 
-.top-menu A {
+.top-menu, .top-menu li {
+    position: relative;
+    float: left;
+}
+
+.header-container a {
     color: #fff;
-    padding: 0 10px;
+    padding: 0px 10px;
 }
-.top-menu A:hover {
+.header-container a:hover {
     color: #FEFFBC;
-    text-decoration: none;
 }
+.header-container a:after {
+    position: absolute;
+    content: ' ';
+    left: 4px;
+    right: 4px;
+    bottom: 1px;
+    height: 1px;
+    background: #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-box-shadow: 0 0 5px 2px rgb(255, 255, 255), 0 -2px 10px rgba(255, 255, 255, 0.75);
+    -moz-box-shadow: 0 0 5px 2px rgb(255, 255, 255), 0 -2px 10px rgba(255, 255, 255, 0.75);
+    box-shadow: 0 0 5px 2px rgb(255, 255, 255), 0 -2px 10px rgba(255, 255, 255, 0.75);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    -khtml-opacity: 0;
+    -moz-opacity: 0;
+    opacity: 0;
+}
+.ie8 .header-container a:after {
+    display: none;
+}
+.header-container li a:hover {
+    padding-top: 0;
+    padding-bottom: 8px;
+    color: white;
+}
+.header-container li a:hover:after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    opacity: 1;
+}
+.ie8 .header-container li a:hover:after {
+    display: block;
+}
+.no-generatedcontent .header-container li a:hover {
+    padding-bottom: 4px;
+    border-bottom: 4px solid #66ccff;
+}
+
 
 #logo {
     width: 159px;
@@ -57,7 +110,6 @@ header {
     position: relative;
 }
 #site-name {
-    font-family: 'Verdana';
     position: absolute;
     color: #fff;
     text-shadow:1px 1px #000;
@@ -80,7 +132,10 @@ BODY FOOTER {
     height: 250px;
     margin-top: 40px;
     padding: 20px 10px;
-    background: #262626;
+}
+
+BODY FOOTER.black-gradient {
+    border-top: 1px solid #555;
 }
 
 TABLE .td-center, TABLE .th-center {
@@ -98,6 +153,15 @@ TEXTAREA {
     float: left;
     margin-top: -10px;
     margin-left: 2px;
+}
+
+.menu-subtitle ul {
+    display: inline;
+}
+
+.menu-subtitle ul li {
+    display: inline;
+    padding-right: 10px;
 }
 
 .main-content {
@@ -222,4 +286,27 @@ div .pagerfanta .current {
 .results-info {
     display: block;
     color: #003d86;
+}
+
+/* List */
+.bullets {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.bullets > li {
+    padding: 0 0 0 1.3em;
+    margin-bottom: 1em;
+    position: relative;
+}
+.bullets > li:before {
+    display: block;
+    position: absolute;
+    content: '';
+    top: 0.65em;
+    left: 0;
+    width: 9px;
+    height: 9px;
+    margin-top: -4px;
+    background: url(/img/sprites.png) no-repeat -712px -35px;
 }
