--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/list.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/list.html.twig
@@ -1,6 +1,6 @@
 {% include 'AnyxCrosswordBundle:Lists:pagination.html.twig' with {'result': result}  %}
 
-<ul>
+<ul class="eight-columns bullets">
 {% for crossword in result %}
 <li class="margin-bottom margin-top">
     <a href="{{path('crossword_solve', {'id' : crossword.id })}}">{{ crossword.title }}</a>
