--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/new.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/new.html.twig
@@ -13,7 +13,15 @@
     {{ 'New crosswords' | trans }}
 {% endblock %}
 
+{% block page_subtitle %}
+<div class="menu-subtitle">
+    {{ knp_menu_render('AnyxCrosswordBundle:Builder:crosswordsMenu', {'template' : 'AnyxCrosswordBundle:Default:menu.html.twig', 'rootClass' : 'bullets margin-right' }) }}
+</div>
+{% endblock %}
+        
 {% block body %}
+
+        
 <div class="results clear">
     {% include 'AnyxCrosswordBundle:Lists:list.html.twig' with {'result': result}  %}
 </div>
